--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -33,4 +33,4 @@ jobs:
         with:
           platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7
           push: true
-          tags: disappear9/hentaiathome:latest
+          tags: aphy7/hentaiathome:latest
