--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -31,6 +31,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7
+          platforms: linux/amd64,linux/arm64/v8
           push: true
           tags: aphy7/hentaiathome:latest
